test/sema/lambda-capture-local-variable.delta
// RUN: %check_errors %not %delta -typecheck %s

void main() {
    var a = 1;
    // CHECK: [[@LINE+1]]:28: error: lambda capturing not implemented yet
    var b = (int c) -> c + a;
}
